feat: worked on coffee

--- a/index.html
+++ b/index.html
@@ -15,17 +15,11 @@
             <option>medium</option>
             <option>dark</option>
         </select>
+        <input type="text" placeholder="Find a coffee!">
         <input id="submit" type="submit" />
     </form>
 
     <table>
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>NAME</th>
-                <th>ROAST</th>
-            </tr>
-        </thead>
         <tbody id="coffees"></tbody>
     </table>
 
