feat: currently on the search bar portion

--- a/index.html
+++ b/index.html
@@ -5,24 +5,25 @@
     <title></title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>Coffee!</h1>
+    <body>
+        <h1>Coffee!</h1>
 
-    <form>
-        <label for="roast-selection"></label>
-        <select id="roast-selection">
-            <option>light</option>
-            <option>medium</option>
-            <option>dark</option>
-        </select>
-        <input type="text" placeholder="Find a coffee!">
-        <input id="submit" type="submit" />
-    </form>
+        <form>
+            <label for="roast-selection"></label>
+            <select id="roast-selection">
+                <option>light</option>
+                <option>medium</option>
+                <option>dark</option>
+            </select>
+            <label for="coffee-selection"></label>
+            <input id="coffee-selection" type="text" placeholder="Find a coffee!">
+            <input id="submit" type="submit" />
+        </form>
 
-    <table>
-        <tbody id="coffees"></tbody>
-    </table>
+        <table>
+            <tbody id="coffees"></tbody>
+        </table>
 
-    <script src="main.js"></script>
-</body>
+        <script src="main.js"></script>
+    </body>
 </html>
