feat: added all option

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
         <form>
             <label for="roast-selection"></label>
             <select id="roast-selection">
-                <option>light</option>
-                <option>medium</option>
-                <option>dark</option>
+                <option>All</option>
+                <option>Light</option>
+                <option>Medium</option>
+                <option>Dark</option>
             </select>
             <label for="coffee-selection"></label>
             <input id="coffee-selection" type="text" placeholder="Find a coffee!">
