--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
                 <option>Medium</option>
                 <option>Dark</option>
             </select>
+            <input id="submit" type="submit" />
+        </form>
+
+        <form>
             <label for="coffee-selection"></label>
             <input id="coffee-selection" type="text" placeholder="Find a coffee!">
-            <input id="submit" type="submit" />
+            <input id="coffee-search" type="submit" />
         </form>
 
         <table>
