--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <h1>Coffee!</h1>
 
-        <form>
+        <form >
             <label for="roast-selection"></label>
-            <select id="roast-selection">
+            <select id="roast-selection" class="bleh">
                 <option>All</option>
                 <option>Light</option>
                 <option>Medium</option>
