feat: fixed drop down somewhat

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <form >
             <label for="roast-selection"></label>
-            <select id="roast-selection" class="bleh">
+            <select id="roast-selection">
                 <option>All</option>
                 <option>Light</option>
                 <option>Medium</option>
