feat: fiexed search bar

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <form>
             <label for="coffee-selection"></label>
             <input id="coffee-selection" type="text" placeholder="Find a coffee!">
-            <input id="coffee-search" type="submit" />
+            <input id="coffee-submit" type="submit" />
         </form>
 
         <table>
