--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
     <body>
-        <h1>Coffee!</h1>
+        <h1>Cafe</h1>
 
-        <form >
+        <form>
+            <h3> Roast </h3>
             <label for="roast-selection"></label>
             <select id="roast-selection">
                 <option>All</option>
@@ -20,10 +21,34 @@
         </form>
 
         <form>
+            <h3>Coffee Name</h3>
             <label for="coffee-selection"></label>
             <input id="coffee-selection" type="text" placeholder="Find a coffee!">
             <input id="coffee-submit" type="submit" />
         </form>
+
+        <form>
+            <h3> Roast </h3>
+            <label for="roast-new"></label>
+            <select id="roast-new">
+                <option> Light </option>
+                <option> Medium</option>
+                <option> Dark</option>
+            </select>
+        </form>
+
+        <form>
+            <h3>Name</h3>
+            <label for="coffee-name-new"></label>
+            <input id="coffee-name-new" type="text">
+            <input id="coffee-name-new-submit" type="submit"/>
+
+        </form>
+
+
+
+
+
 
         <table>
             <tbody id="coffees"></tbody>
