--- a/index.html
+++ b/index.html
@@ -7,52 +7,54 @@
 </head>
     <body>
         <h1>Cafe</h1>
+        <div id="coffee-original">
+            <form>
+                <h2>Look up one of our amazing coffees ;)</h2>
+                <h3> Roast </h3>
+                <label for="roast-selection"></label>
+                <select id="roast-selection">
+                    <option>All</option>
+                    <option>Light</option>
+                    <option>Medium</option>
+                    <option>Dark</option>
+                </select>
+                <input id="submit" type="submit"/>
+            </form>
 
-        <form>
-            <h3> Roast </h3>
-            <label for="roast-selection"></label>
-            <select id="roast-selection">
-                <option>All</option>
-                <option>Light</option>
-                <option>Medium</option>
-                <option>Dark</option>
-            </select>
-            <input id="submit" type="submit"/>
-        </form>
+            <form>
+                <h3>Coffee Name</h3>
+                <label for="coffee-selection"></label>
+                <input id="coffee-selection" type="text" placeholder="Find a coffee!">
+                <input id="coffee-submit" type="submit"/>
+            </form>
+        </div>
 
-        <form>
-            <h3>Coffee Name</h3>
-            <label for="coffee-selection"></label>
-            <input id="coffee-selection" type="text" placeholder="Find a coffee!">
-            <input id="coffee-submit" type="submit" />
-        </form>
+        <div id="coffee-add">
+            <h2>Add a Coffee!</h2>
+            <form>
+                <h3> Roast </h3>
+                <label for="roast-new"></label>
+                <select id="roast-new">
+                    <option>Light</option>
+                    <option>Medium</option>
+                    <option>Dark</option>
+                </select>
+            </form>
 
-        <form>
-            <h3> Roast </h3>
-            <label for="roast-new"></label>
-            <select id="roast-new">
-                <option> Light </option>
-                <option> Medium</option>
-                <option> Dark</option>
-            </select>
-        </form>
+            <form>
+                <h3>Name</h3>
+                <label for="coffee-name-new"></label>
+                <input id="coffee-name-new" type="text">
+                <input id="coffee-name-new-submit" type="submit"/>
+            </form>
+        </div>
 
-        <form>
-            <h3>Name</h3>
-            <label for="coffee-name-new"></label>
-            <input id="coffee-name-new" type="text">
-            <input id="coffee-name-new-submit" type="submit"/>
-
-        </form>
-
-
-
-
-
-
-        <table>
-            <tbody id="coffees"></tbody>
-        </table>
+        <div>
+            <table>
+                <tbody id="coffees"></tbody>
+            </table>
+        </div>
+<!--        Javascript linked below-->
 
         <script src="main.js"></script>
     </body>
