--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Cafe de Iffy</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
-    <body>
+<body>
+    <div>
         <h1>Cafe</h1>
         <div id="coffee-original">
             <form>
@@ -54,9 +59,9 @@
                 <tbody id="coffees"></tbody>
             </table>
         </div>
-
+    </div>
 <!--        Javascript linked below-->
 
         <script src="main.js"></script>
-    </body>
+</body>
 </html>
