--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+<!--    BootStrap below-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<!--    Google Fonts-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Roboto+Condensed&family=Yatra+One&family=Zilla+Slab+Highlight:wght@700&display=swap" rel="stylesheet">
+<!--    Custom Css below-->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <h1 class="text-center">Cafe de Iffy</h1>
-        <p class="font-italic text-center">Here in Cafe de Iffy, we are dedicated to bring you the best cafe experience you could ever imagine! Choose one of our fourteen world famous coffees, from Light City to our best selling City.</p>
+        <p class="text-center font-italic" id="intro">Here in Cafe de Iffy, we are dedicated to bring you the best cafe experience you could ever imagine! Choose one of our fourteen world famous coffees, from Light City to our best selling City.</p>
         <div class="row">
             <div class="col">
             <div id="coffee-original">
