feat: placeholder text

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <form>
                     <h3 class="mt-3 mb-3">Name</h3>
                     <label for="coffee-name-new"></label>
-                    <input id="coffee-name-new" type="text">
+                    <input id="coffee-name-new" type="text" placeholder="Add your own brew!">
                     <input id="coffee-name-new-submit" type="submit"/>
                 </form>
             </div>
