--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <body>
     <div class="container">
         <h1 class="text-center">Cafe de Iffy</h1>
+        <div id="cafe-pic">
+        <img src="photo-1501339847302-ac426a4a7cbb.jpeg" alt="cafe-setting">
+        </div>
         <p class="text-center font-italic" id="intro">Here in Cafe de Iffy, we are dedicated to bring you the best cafe experience you could ever imagine! Choose one of our fourteen world famous coffees, from Light City to our best selling City.</p>
         <div class="row">
             <div class="col">
@@ -31,14 +34,14 @@
                         <option>Medium</option>
                         <option>Dark</option>
                     </select>
-                    <input id="submit" type="submit"/>
+                    <input class="submitButtons" id="submit" type="submit"/>
                 </form>
 
                 <form>
                     <h3 class="mt-3 mb-3">Coffee Name</h3>
                     <label for="coffee-selection"></label>
                     <input id="coffee-selection" type="text" placeholder="Find a coffee!">
-                    <input id="coffee-submit" type="submit"/>
+                    <input class="submitButtons" id="coffee-submit" type="submit"/>
                 </form>
             </div>
 
@@ -58,7 +61,7 @@
                     <h3 class="mt-3 mb-3">Name</h3>
                     <label for="coffee-name-new"></label>
                     <input id="coffee-name-new" type="text" placeholder="Add your own brew!">
-                    <input id="coffee-name-new-submit" type="submit"/>
+                    <input class="submitButtons" id="coffee-name-new-submit" type="submit"/>
                 </form>
             </div>
             </div>
