feat: flexed some stuff

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
         <h1 class="text-center">Cafe de Iffy</h1>
         <div id="cafe-pic">
-        <img src="photo-1501339847302-ac426a4a7cbb.jpeg" alt="cafe-setting">
+<!--        <img src="photo-1501339847302-ac426a4a7cbb.jpeg" alt="cafe-setting">-->
         </div>
         <p class="text-center font-italic" id="intro">Here in Cafe de Iffy, we are dedicated to bring you the best cafe experience you could ever imagine! Choose one of our fourteen world famous coffees, from Light City to our best selling City.</p>
         <div class="row">
@@ -66,13 +66,11 @@
             </div>
             </div>
 
-            <div class="col">
-            <div>
-                <table>
+<!--            <div class="col">-->
+                <table class="col">
                     <tbody id="coffees"></tbody>
                 </table>
-            </div>
-            </div>
+<!--            </div>-->
         </div>
     </div>
 <!--        Javascript linked below-->
